Update dependencies in simulator package to use @homebridge/node-pty-prebuilt-multiarch@0.13.1 and remove deprecated packages

--- a/packages/simulator/package.json
+++ b/packages/simulator/package.json
@@ -12,7 +12,7 @@
     "test": "vitest run --runTestsByPath packages/simulator/test/simulator.test.ts"
   },
   "dependencies": {
-    "node-pty-prebuilt-multiarch": "0.10.1-pre.5"
+    "@homebridge/node-pty-prebuilt-multiarch": "^0.13.1"
   },
   "devDependencies": {
     "typescript": "^5.3.3"
