Enhance HomeNet Bridge functionality with serial device wait logic, improved error handling, and new Docker commands; update README for clarity on Docker Compose stack and usage

--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "core:build": "pnpm --filter @rs485-homenet/core build",
     "service:build": "pnpm --filter @rs485-homenet/service build",
     "ui:build": "pnpm --filter @rs485-homenet/ui build",
+    "dev:up": "docker compose -f deploy/docker/docker-compose.dev.yml up -d simulator core ui mq",
+    "dev:down": "docker compose -f deploy/docker/docker-compose.dev.yml down",
+    "dev:logs": "docker compose -f deploy/docker/docker-compose.dev.yml logs -f",
+    "dev:restart:core": "docker compose -f deploy/docker/docker-compose.dev.yml restart core",
+    "dev:restart:ui": "docker compose -f deploy/docker/docker-compose.dev.yml restart ui",
     "lint": "pnpm -r lint",
     "build": "pnpm -r build",
     "format": "pnpm -r --if-present format",
