--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "main": "dist/server.js",
   "scripts": {
-    "build": "tsc -p tsconfig.json",
+    "build": "pnpm --filter @rs485-homenet/ui build && node ../../scripts/sync-ui-static.mjs && tsc -p tsconfig.json",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "start": "node dist/server.js",
     "lint": "tsc --noEmit -p tsconfig.json",
@@ -14,7 +14,8 @@
   "dependencies": {
     "@rs485-homenet/core": "workspace:*",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mqtt": "^5.3.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
