--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ packages/*/node_modules
 dist
 packages/*/dist
 .svelte-kit
+packages/service/static
 
 # TypeScript metadata
 tsconfig.tsbuildinfo
@@ -31,5 +32,4 @@ coverage
 .vscode/*
 !.vscode/settings.json
 
-# Lockfile (intentionally unmanaged)
-pnpm-lock.yaml
+
