--- a/deploy/docker/docker-compose.yml
+++ b/deploy/docker/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   simulator:
     build:
@@ -19,8 +17,7 @@ services:
       dockerfile: deploy/docker/core.Dockerfile
     container_name: rs485-core
     environment:
-      SERIAL_PORT: /simshare/rs485-sim-tty
-      BAUD_RATE: '9600'
+      SERIAL_PORT: 192.168.0.83:8888
       MQTT_URL: mqtt://mq:1883
       PORT: '3000'
     volumes:
