--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
+    "js-yaml": "^4.1.0",
     "mqtt": "^5.3.4",
     "serialport": "^12.0.0"
   },
