--- a/packages/core/config/commax.homenet_bridge.yaml
+++ b/packages/core/config/commax.homenet_bridge.yaml
@@ -6,36 +6,65 @@ homenet_bridge:
     stop_bits: 1
   
   packet_defaults:
+    rx_timeout: 10ms
+    tx_delay: 50ms
+    tx_timeout: 500ms
+    tx_retry_cnt: 3
+    rx_length: 8
     rx_header: []
     tx_header: []
     rx_footer: []
     tx_footer: []
-    rx_checksum: none
-    tx_checksum: none
+    rx_checksum: add
+    tx_checksum: add
 
   devices:
     - name: "Commax Wallpad"
       entities:
+        - type: light
+          id: "light_breaker"
+          name: "일괄 소등"
+          state:
+            data: [0x01]
+            offset: 1
+            mask: 0xFF
+          state_on:
+            data: [0x01]
+            offset: 0
+            mask: 0xFF
+          state_off:
+            data: [0x00]
+            offset: 0
+            mask: 0xFF
+          command_on:
+            cmd: [0x22, 0x01, 0x01, 0x01, 0x00, 0x00, 0x00]
+            ack: [0xA2, 0x01, 0x01]
+          command_off:
+            cmd: [0x22, 0x01, 0x00, 0x01, 0x00, 0x00, 0x00]
+            ack: [0xA2, 0x00, 0x01]
+          packet_parameters:
+            rx_header: [0xA0]
+            tx_header: []
         - type: light
           id: "light_1"
           name: "조명 1"
           state:
             data: [0x01]
             offset: 1
-            mask: 0x01
+            mask: 0xFF
           state_on:
             data: [0x01]
-            offset: 1
-            mask: 0x01
+            offset: 0
+            mask: 0xFF
           state_off:
             data: [0x00]
-            offset: 1
-            mask: 0x01
+            offset: 0
+            mask: 0xFF
           command_on:
-            cmd: [0x31, 0x01, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00]
+            cmd: [0x31, 0x01, 0x01, 0x00, 0x00, 0x00, 0x00]
             ack: [0xB1, 0x01, 0x01]
           command_off:
-            cmd: [0x31, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+            cmd: [0x31, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00]
             ack: [0xB1, 0x00, 0x01]
           packet_parameters:
             rx_header: [0xB0]
@@ -44,22 +73,22 @@ homenet_bridge:
           id: "light_2"
           name: "조명 2"
           state:
-            data: [0x01]
+            data: [0x02]
             offset: 1
-            mask: 0x01
+            mask: 0xFF
           state_on:
             data: [0x01]
-            offset: 1
-            mask: 0x01
+            offset: 0
+            mask: 0xFF
           state_off:
             data: [0x00]
-            offset: 1
-            mask: 0x01
+            offset: 0
+            mask: 0xFF
           command_on:
-            cmd: [0x31, 0x02, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00]
+            cmd: [0x31, 0x02, 0x01, 0x00, 0x00, 0x00, 0x00]
             ack: [0xB1, 0x01, 0x02]
           command_off:
-            cmd: [0x31, 0x02, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+            cmd: [0x31, 0x02, 0x00, 0x00, 0x00, 0x00, 0x00]
             ack: [0xB1, 0x00, 0x02]
           packet_parameters:
             rx_header: [0xB0]
@@ -68,22 +97,22 @@ homenet_bridge:
           id: "light_3"
           name: "조명 3"
           state:
-            data: [0x01]
+            data: [0x03]
             offset: 1
-            mask: 0x01
+            mask: 0xFF
           state_on:
             data: [0x01]
-            offset: 1
-            mask: 0x01
+            offset: 0
+            mask: 0xFF
           state_off:
             data: [0x00]
-            offset: 1
-            mask: 0x01
+            offset: 0
+            mask: 0xFF
           command_on:
-            cmd: [0x31, 0x03, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00]
+            cmd: [0x31, 0x03, 0x01, 0x00, 0x00, 0x00, 0x00]
             ack: [0xB1, 0x01, 0x03]
           command_off:
-            cmd: [0x31, 0x03, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+            cmd: [0x31, 0x03, 0x00, 0x00, 0x00, 0x00, 0x00]
             ack: [0xB1, 0x00, 0x03]
           packet_parameters:
             rx_header: [0xB0]
@@ -92,22 +121,22 @@ homenet_bridge:
           id: "light_4"
           name: "조명 4"
           state:
-            data: [0x01]
+            data: [0x04]
             offset: 1
-            mask: 0x01
+            mask: 0xFF
           state_on:
             data: [0x01]
-            offset: 1
-            mask: 0x01
+            offset: 0
+            mask: 0xFF
           state_off:
             data: [0x00]
-            offset: 1
-            mask: 0x01
+            offset: 0
+            mask: 0xFF
           command_on:
-            cmd: [0x31, 0x04, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00]
+            cmd: [0x31, 0x04, 0x01, 0x00, 0x00, 0x00, 0x00]
             ack: [0xB1, 0x01, 0x04]
           command_off:
-            cmd: [0x31, 0x04, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+            cmd: [0x31, 0x04, 0x00, 0x00, 0x00, 0x00, 0x00]
             ack: [0xB1, 0x00, 0x04]
           packet_parameters:
             rx_header: [0xB0]
@@ -117,33 +146,33 @@ homenet_bridge:
           id: "heater_1"
           name: "난방 1"
           state:
-            data: []
+            data: [0x01]
             offset: 1
-            mask: 0x81
+            mask: 0xFF
           state_temperature_current:
-            offset: 3
+            offset: 2
             length: 1
             decode: bcd
           state_temperature_target:
-            offset: 4
+            offset: 3
             length: 1
             decode: bcd
           state_off:
-            data: [0x00]
-            offset: 1
-            mask: 0x81
+            data: [0x80]
+            offset: 0
+            mask: 0xFF
           state_heat:
-            data: [0x01]
-            offset: 1
-            mask: 0x81
+            data: [0x81]
+            offset: 0
+            mask: 0xFF
           command_off:
-            cmd: [0x04, 0x01, 0x04, 0x00, 0x00, 0x00, 0x00, 0x00]
+            cmd: [0x04, 0x01, 0x04, 0x00, 0x00, 0x00, 0x00]
             ack: [0x84, 0x80, 0x01]
           command_heat:
-            cmd: [0x04, 0x01, 0x04, 0x81, 0x00, 0x00, 0x00, 0x00]
+            cmd: [0x04, 0x01, 0x04, 0x81, 0x00, 0x00, 0x00]
             ack: [0x84, 0x81, 0x01]
           command_temperature:
-            cmd: [0x04, 0x01, 0x03, 0x00, 0x00, 0x00, 0x00, 0x00]
+            cmd: [0x04, 0x01, 0x03, 0x00, 0x00, 0x00, 0x00]
             value_offset: 3
             value_encode: bcd
           packet_parameters:
@@ -155,18 +184,18 @@ homenet_bridge:
           name: "가스 밸브"
           state:
             data: []
-            offset: 1
-            mask: 0x80
+            offset: 0
+            mask: 0x00
           state_open:
-            data: [0x80]
-            offset: 1
-            mask: 0x80
+            data: [0x80, 0x80]
+            offset: 0
+            mask: [0xFF, 0xFF]
           state_closed:
-            data: [0x40]
-            offset: 1
-            mask: 0x40
+            data: [0x40, 0x40]
+            offset: 0
+            mask: [0xFF, 0xFF]
           command_close:
-            cmd: [0x11, 0x01, 0x80, 0x00, 0x00, 0x00, 0x00, 0x00]
+            cmd: [0x11, 0x01, 0x80, 0x00, 0x00, 0x00, 0x00]
             ack: [0x91, 0x88, 0x88]
           packet_parameters:
             rx_header: [0x90]
@@ -176,7 +205,7 @@ homenet_bridge:
           id: "elevator_floor"
           name: "엘리베이터 층수"
           state_number:
-            offset: 2
+            offset: 1
             length: 1
             precision: 0
           packet_parameters:
@@ -186,7 +215,7 @@ homenet_bridge:
           id: "elevator_call"
           name: "엘리베이터 호출"
           command_press:
-            cmd: [0xA0, 0x01, 0x01, 0x00, 0x08, 0x15, 0x00, 0x00]
+            cmd: [0xA0, 0x01, 0x01, 0x00, 0x08, 0x15, 0x00]
             ack: [0x23]
           packet_parameters:
             rx_header: []
