--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^16.4.5",
     "js-yaml": "^4.1.0",
     "mqtt": "^5.3.4",
+    "pino": "^10.1.0",
+    "pino-pretty": "^13.1.2",
     "serialport": "^12.0.0"
   },
   "devDependencies": {
