--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "pino-pretty": "^13.1.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   }
